# chromapro

./: .dockerignore  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.cargo/: config.toml
.github/workflows/: ci.yml
.venv-test/: pyvenv.cfg
chromapro/: __init__.py  cli.py  client.py  collection.py  config.py  migrate.py
chromapro_core/: Cargo.toml
chromapro_core/src/: db.rs  errors.rs  lib.rs
docker/: Dockerfile  docker-compose.yml
scripts/: bootstrap.sh  hardening_suite.sh  release_smoke.sh
tests/: test_api_compatibility.py  test_benchmarks.py  test_chromadb_vs_chromapro.py  test_client_lifecycle.py  test_collection_crud.py  test_correctness.py  test_corruption_recovery.py  test_filters_and_pagination.py  test_hnsw_rebuild_stress.py  test_migration.py  test_query.py  test_storage_format.py  test_stress_recovery.py  test_verify_hardening.py
