[package]
name = "chromapro_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "chromapro_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py310"] }
rocksdb = { version = "0.22", default-features = false, features = ["snappy", "multi-threaded-cf"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
parking_lot = "0.12"
uuid = { version = "1.8", features = ["v4"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
